@@ -1,3 +1,9 @@
+2008-01-07 20:04-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Palettes/0Menus/GormMenuItemAttributesInspector.h
+	* Palettes/0Menus/GormMenuItemAttributesInspector.m: Moved strings
+	for non-printable characters to class variables.
+
 2008-01-07 18:50-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormCore/GormGenericEditor.m: Removed patch for bug#17539.  Was
